# Generating_patterns

Generating_patterns/: CMakeLists.txt  Generating_patterns.sln  Generating_patterns.vcxproj  Generating_patterns.vcxproj.filters  main.cpp  sql_query_builder.h
